Fixed bug where the unread count would overlap the folder popup. Fixed bug where the popups would be open outside the window

--- a/source/css/App.scss
+++ b/source/css/App.scss
@@ -52,12 +52,16 @@ $red: #cc3333;
 .onyx-popup > * {
 	margin: 10px 5px;
 }
-/*.onyx-popup {
-	.onyx-button {
-		width: 47.5%;
-	}
-}*/
 
+.loginPopup {
+	width: 400px;
+	.popupText {
+		margin: 5px 10px;
+	}
+}
+.onyx-popup > * {
+	margin: 5px 5px;
+}
 .errorMessage {
 	text-align: center;
 	color: $red;
@@ -92,7 +96,7 @@ $red: #cc3333;
 .folderMenu {
 	position: relative;
 	right: 60px;
-	bottom: 30px;
+	bottom: 45px;
 }
 .folderFeedTitle {
 	font-size: 14px;
@@ -101,6 +105,13 @@ $red: #cc3333;
 	
 	@include truncated-text;
 }
+
+.onyx-popup-decorator {
+	position: relative;
+	z-index: 10;
+	pointer-events:none;
+}
+
 .folderFeedTitle.unreadCount {
 	font-weight: bold;
 }
@@ -230,6 +241,7 @@ $iconDisplaceY: $unreadDisplaceY + 8px;
 	/*border: 1px red solid;*/
 	.unread {
 		position: relative;
+		z-index: 0;
 		font-size: 15px;
 		font-weight: bold;
 		bottom: $unreadDisplaceY;
